# AvatarAgent

./: .gitignore  .npmrc  README.md  launcher.py  package-lock.json  pyproject.toml
.claude/: settings.local.json
config/: config.ini  config_template.ini
docs/: app.py  autodl_ssh_tunnel.bat  autodl_whisper_server.py  combined_launcher.py  development_plan.md  ui_style_guide.md  一键启动追爆智能体.bat  服务启动指南.md
docs/settings/: AppSidebar.vue
frontend/: pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: audio.ts  avatar.ts  client.ts  config.ts  pipeline.ts  script.ts  upload.ts  video.ts
frontend/src/router/: index.ts
frontend/src/stores/: config.ts  pipeline.ts
frontend/src/styles/: global.css  variables.css
frontend/src/views/: AccountsView.vue  AssetsView.vue  AvatarsView.vue  HelpView.vue  (+5 more)
resources/compliance/: prohibited_words.txt
scripts/: start_all.ps1  start_cosyvoice.ps1
src/: __init__.py
src/api/: app.py
src/audio/: __init__.py  asr.py  cosyvoice_deploy.py  tts.py
src/avatar/: __init__.py  heygem.py
src/common/: __init__.py  config_manager.py  exceptions.py  file_utils.py  logger.py
src/pipeline/: __init__.py  orchestrator.py
src/script/: __init__.py  compliance.py  extractor.py  rewriter.py
src/uploader/: __init__.py  base.py  douyin.py  shipinhao.py  xiaohongshu.py
src/video/: __init__.py  bgm.py  composer.py  cover.py  subtitle.py
tests/: test_api.py  test_common.py
whisper_local_test/: 1_setup_cuda.bat  2_test_device.bat  3_download_model.bat  README.md  download_model.py  test_asr.py
(+18 files in other folders)
